New in version 2.0.0:
* Gave AddFromRawData a default implementation.  (No longer pure virtual.)  This means it's no longer a required override.
* Refactoring!
  * Component has been renamed System
  * ComponentData has been renamed Component
* delta_time changed from int -> double
* Real dependency tracking
* Support functions for multighreading.  (accessdependencies, etc)
* Automatic Multithreading scheduling
* Added the ability to get the name of a system.  (automagically populated!)
* renamed AddEntityToSystem<> -> AddComponent<>
* removed the allocation location parameter to addentity.
* fully removed vector pools - Everything now uses either vectors or unordered_maps under the hood.
* Added new accessor functions to replace some of the functionality that used to live on the entity objects.
  * EntityManager::IsEntityValid will tell you if an entity is still in the system, or has been deleted.
  * EntityManager::IsMarkedForDeletion will tell you if an entity is going to go away at the end of the next update.
* System::ComponentData no longer has private constructors/assignment operators.

rename 
Todo:
* Specialization for systems that have no data
* networking!
* Make smarter multithreading scheduler.