@@ -17,7 +17,7 @@ void FountainProjectile::UpdateAllEntities(corgi::WorldTime delta_time) {
 		SpriteData* sprite = Data<SpriteData>(entity);
 		PhysicsData* physics = Data<PhysicsData>(entity);
 
-		transform->scale *= 0.98f;
+		transform->scale *= 0.99f;
 		if (transform->scale.x() < 0.1) {
 			entity_manager_->DeleteEntity(entity);
 		}
@@ -39,7 +39,6 @@ void FountainProjectile::InitEntity(corgi::Entity entity) {
 	SpriteData* sprite = Data<SpriteData>(entity);
 	PhysicsData* physics = Data<PhysicsData>(entity);
 
-	
 	transform->position = vec3(320, 480, 0);
 	transform->scale = vec2(rnd() + 0.5f, rnd() + 0.5f);
 
@@ -48,7 +47,7 @@ void FountainProjectile::InitEntity(corgi::Entity entity) {
 	sprite->size = vec2(50, 50);
 	sprite->tint = vec4(0.5f + rnd(), 0.5f + rnd(), 0.5f + rnd(), 1.0f);
 
-	physics->velocity = vec2(rnd() * 6.0f - 3.0f, rnd() * -10.0f);
-	physics->acceleration = vec2(0.0f, 0.1f);
+	physics->velocity = vec2(rnd() * 6.0f - 3.0f, rnd() * -5.0f - 2.0f);
+	physics->acceleration = vec2(0.0f, 0.05f);
   physics->angular_velocity = quat::FromAngleAxis(0.1f, vec3(0, 0, 1));
 }
