@@ -1,6 +1,6 @@
 #ifndef TEST_FOUNTAIN_PROJETILE_H
 #define TEST_FOUNTAIN_PROJETILE_H
-#include "corgi/system.h"
+#include "corgi/network_system.h"
 #include "math_common.h"
 
 struct FountainData {
@@ -8,7 +8,7 @@ struct FountainData {
 };
 
 
-class FountainProjectile : public corgi::System<FountainData> {
+class FountainProjectile : public corgi::NetworkSystem<FountainData> {
 public:
 
   virtual void UpdateAllEntities(corgi::WorldTime delta_time);
